# qoriq-components_dpdk

./: .mailmap  meson.build  meson_options.txt
app/: meson.build
app/bbdev-du/: meson.build
app/proc-info/: main.c
app/test/: meson.build  test_cryptodev.c
app/test-bbdev/: main.c  meson.build  test_bbdev_perf.c
app/test-pmd/: cmdline_flow.c  config.c  parameters.c  testpmd.c  testpmd.h  txonly.c
buildtools/: symlink-drivers-solibs.sh
config/: meson.build
config/arm/: arm64_dpaa_linux_gnu_gcc  arm64_imx_linux_gcc  arm64_imx_linux_gnu_gcc  arm64_imx_poky_linux_gcc  arm64_imx_wifi_linux_gcc  meson.build
doc/api/: doxy-api-index.md  doxy-api.conf.in
doc/guides/howto/: flow_bifurcation.rst
doc/guides/nics/: dpaa.rst  dpaa2.rst  mlx5.rst  virtio.rst
doc/guides/platform/: cnxk.rst
doc/guides/prog_guide/: index.rst
doc/guides/rel_notes/: release_19_11.rst
drivers/baseband/la12xx/: bbdev_la12xx.c  meson.build  rte_pmd_bbdev_la12xx.h  version.map
drivers/baseband/la93xx/: bbdev_la93xx.c  bbdev_la93xx_wdog.c  bbdev_la93xx_wdog.h  meson.build  rte_pmd_bbdev_la93xx.h
drivers/bus/dpaa/: dpaa_bus.c  version.map
drivers/bus/dpaa/include/: fman.h  fsl_bman.h  fsl_fman.h  fsl_qman.h  netcfg.h
drivers/bus/fslmc/: bus_fslmc_driver.h  fslmc_bus.c  fslmc_vfio.c  version.map
drivers/bus/fslmc/portal/: dpaa2_hw_dpci.c  dpaa2_hw_dpio.c  dpaa2_hw_pvt.h
drivers/bus/fslmc/qbman/: qbman_portal.c
drivers/bus/lsx_pciep/: lsx_pciep_bus.c  lsx_pciep_dev.h  lsx_pciep_dw.c  lsx_pciep_pcie.c  rte_lsx_pciep_bus.h  version.map
drivers/common/cnxk/: roc_npa.c  roc_npc_priv.h
drivers/crypto/caam_jr/: caam_jr.c  caam_jr_desc.h  caam_jr_uio.c
drivers/crypto/dpaa2_sec/: dpaa2_sec_dpseci.c  dpaa2_sec_priv.h
drivers/crypto/dpaa_sec/: dpaa_sec.c  dpaa_sec.h
drivers/crypto/openssl/: rte_openssl_pmd.c
drivers/crypto/qat/: qat_sym.c
drivers/crypto/qat/dev/: qat_crypto_pmd_gen3.c  qat_crypto_pmd_gens.h  qat_sym_pmd_gen1.c
drivers/dma/dpaa/: dpaa_qdma.c
drivers/dma/dpaa2/: dpaa2_qdma.c
drivers/event/cnxk/: cnxk_eventdev.c
drivers/event/dpaa2/: dpaa2_eventdev.c
drivers/event/dsw/: dsw_evdev.c
drivers/mempool/dpaa/: dpaa_mempool.c  dpaa_mempool.h
drivers/mempool/dpaa2/: dpaa2_hw_mempool.c  dpaa2_hw_mempool.h  version.map
drivers/net/af_xdp/: meson.build
drivers/net/bonding/: rte_eth_bond_pmd.c
drivers/net/dpaa/: dpaa_ethdev.c  dpaa_ethdev.h  dpaa_flow.c  dpaa_flow.h  dpaa_fmc.c  dpaa_oldev.c  dpaa_rxtx.c  dpaa_rxtx.h  meson.build  rte_pmd_dpaa.h  version.map
drivers/net/dpaa/fmlib/: fm_ext.h
drivers/net/dpaa2/: dpaa2_dpcon.c  dpaa2_ethdev.c  dpaa2_ethdev.h  dpaa2_flow.c  dpaa2_mux.c  dpaa2_parser_decode.h  dpaa2_ptp.c  dpaa2_recycle.c  dpaa2_rxtx.c  dpaa2_scheduler.c  dpaa2_tm.c  meson.build  rte_pmd_dpaa2.h  version.map
drivers/net/dpaa2/base/: dpaa2_hw_dpni.c  dpaa2_hw_dpni_annot.h
drivers/net/dpaa2/mc/: dpni.c  fsl_dpdmux.h  fsl_dpni.h  (+1 more)
drivers/net/e1000/: e1000_ethdev.h  em_rxtx.c  meson.build
drivers/net/enetc/: enetc.h  enetc4_ethdev.c  enetc4_vf.c  enetc_cbdr.c  enetc_ethdev.c  enetc_rxtx.c  meson.build
drivers/net/enetfec/: enet_ethdev.c  enet_ethdev.h  enet_rxtx.c
drivers/net/enetqos/: enetqos_ethdev.c  enetqos_ethdev.h  enetqos_hw.h  enetqos_pmd_logs.h  enetqos_rxtx.c
drivers/net/iavf/: iavf_ethdev.c  iavf_rxtx.c  iavf_rxtx.h
drivers/net/ice/: ice_rxtx.c
drivers/net/ixgbe/: ixgbe_rxtx.c
drivers/net/lsxinic/: lsxinic_common.h  lsxinic_common_helper.c  lsxinic_common_reg.h  lsxinic_ep_dma.c  lsxinic_ep_dma.h  lsxinic_ep_ethdev.c  lsxinic_ep_ethdev.h  lsxinic_ep_ethtool.c  lsxinic_ep_rxtx.c  lsxinic_ep_rxtx.h  lsxinic_ep_vio.c  lsxinic_ep_vio_net.c  lsxinic_ep_vio_rxtx.c  lsxinic_ep_vio_rxtx.h  lsxinic_rc_ethdev.c  lsxinic_rc_ethdev.h  lsxinic_rc_hw.h  lsxinic_rc_pci.c  lsxinic_rc_rxtx.c  lsxinic_rc_vio.c  meson.build  rte_pmd_lsxinic.h  version.map
drivers/net/netvsc/: hn_rndis.c
drivers/net/ngbe/: ngbe_ethdev.c
drivers/net/tap/: rte_eth_tap.c
drivers/net/txgbe/: txgbe_rxtx.c
drivers/raw/: meson.build
drivers/raw/geul_ipc/: Makefile  geul_ipc_api.c  geul_ipc_dev.c  geul_ipc_dev.h  meson.build  rte_pmd_geul_ipc_rawdev.h  rte_pmd_geul_ipc_rawdev_version.map  version.map
examples/: meson.build
examples/capture_streaming/: Makefile  main.c  meson.build
examples/common/nxp/: rte_dpaa2_mux_demo.h  rte_remote_direct_flow.h
examples/dfe_app/: Makefile  cmd_line.c  cmd_line.h  cmd_timer.c  cmd_timer.h  dfe_app.h  ipc.c  ipc.h  logging.h  main.c  meson.build  tti.c  tti.h  tti_lib.c
examples/geul_ipc_benchmark/: Makefile  main.c  meson.build
examples/geul_ipc_testapp/: Makefile  main.c  meson.build
examples/ip_fragmentation/: main.c
examples/ip_reassembly/: main.c
examples/ipsec-ike/: xfrm_km.c
examples/ipsec-secgw/: ipsec-secgw.c  ipsec.h  ipsec_worker.h  sa.c
examples/l1_l2_comm/: l1_l2_comm.h  main.c
examples/l2fwd/: main.c
examples/l2fwd-policer/: Makefile  main.c  meson.build
examples/l2fwd-qdma/: main.c  meson.build
examples/l3fwd/: meson.build
examples/pkt_split_app/: meson.build
examples/port_fwd/: main.c  meson.build  port_fwd.h
examples/qdma_demo/: main.c  meson.build  qdma_demo.h
kernel/linux/kpage_ncache/: kpage_ncache_api.h
lib/bbdev/: rte_bbdev_op.h  rte_bbuf.h
lib/cryptodev/: cryptodev_pmd.h  rte_crypto_sym.h  rte_cryptodev.c  rte_cryptodev.h
lib/eal/: version.map
lib/eal/common/: eal_common_memory.c  eal_common_memzone.c
lib/eal/include/: rte_common.h  rte_memory.h
lib/eal/linux/: eal_memalloc.c
lib/ethdev/: ethdev_driver.c  ethdev_driver.h  ethdev_private.c  rte_ethdev.c  rte_ethdev.h  rte_ethdev_core.h  rte_flow.c  rte_flow.h  rte_flow_driver.h  version.map
lib/mempool/: rte_mempool.c  rte_mempool.h
nxp/: README  README_M7_ENETC_VF  README_PCIe_EP  README_capture_streaming  README_data_validation  README_dpaa1_shared_mac  README_pkt_split_app_demo  README_qdma_demo  crypto_perf_test.sh  debug_dump.sh  lf_images_download.sh
nxp/dpaa2/: README_FLOW_CONTROL  README_TM  dynamic_dpl.sh
nxp/ipsec/: ep0_64X64_proto_udp_ecap.cfg  ep1_64X64_proto_udp_ecap.cfg
(+10 files in other folders)
